@@ -81,7 +81,7 @@ public class TokenProvider {
 
     // 토큰으로 클레임을 만들고 이를 이용해 유저 객체를 만들어서 최종적으로 authentication 객체를 리턴
     public UsernamePasswordAuthenticationToken getAuthentication(String token, TokenType type) {
-        log.warn("=============== this is getAuthentication ");
+        log.trace("getAuthentication");
         TokenKeyDto tokenKeyDto = getTokenKeyByType(type);
 
         Claims claims = Jwts
@@ -94,37 +94,33 @@ public class TokenProvider {
         Collection<? extends GrantedAuthority> authorities =
                 Arrays.stream(claims.get("role").toString().split(","))
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                        .toList();
 
         return new UsernamePasswordAuthenticationToken(claims.getSubject(), token, authorities);
     }
 
     // 토큰의 유효성 검증을 수행
     public boolean validateToken(String token, TokenType type) {
-        log.warn("=============== this is validateToken ");
+        log.trace("validateToken");
         TokenKeyDto tokenKeyDto = getTokenKeyByType(type);
         try {
            Jwts.parserBuilder().setSigningKey(tokenKeyDto.getKey()).build().parseClaimsJws(token);
-
             if(type== TokenType.REFRESH){
-                Object result = refreshTokenRepository.findTokenByToken(token);
-              return result!=null;
+                return refreshTokenRepository.findTokenByToken(token) != null;
             }
-
             return true;
-
         } catch (io.jsonwebtoken.security.SecurityException | MalformedJwtException e) {
 
-            log.info("잘못된 JWT 서명입니다.");
+            log.warn("잘못된 JWT 서명입니다.");
         } catch (ExpiredJwtException e) {
 
-            log.info("만료된 JWT 토큰입니다.");
+            log.warn("만료된 JWT 토큰입니다.");
         } catch (UnsupportedJwtException e) {
 
-            log.info("지원되지 않는 JWT 토큰입니다.");
+            log.warn("지원되지 않는 JWT 토큰입니다.");
         } catch (IllegalArgumentException e) {
 
-            log.info("JWT 토큰이 잘못되었습니다.");
+            log.warn("JWT 토큰이 잘못되었습니다.");
         }
         return false;
     }
